# mml

./:  .readthedocs.yaml  .coveragerc  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  RELEASE.md  license_header.template  pyproject.toml  setup.cfg
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: full-CI.yml  label.yml  min-test.yml  publish.yml  test-publish.yml
docs/: README.md
docs/source/: conf.py  extensions.rst  guides.rst  hpo.rst  index.rst  install.rst  modes.rst  plugins.rst  usage.rst
docs/source/api/: api.rst  cli.rst  components.rst  interactive.rst  overview.rst  (+1 more)
plugins/: README.md  index.txt
plugins/_template/: CHANGELOG.md  MANIFEST.in  README.md  setup.cfg
plugins/_template/src/mml_TODO/: __init__.py  activate.py
plugins/data/: CHANGELOG.md  MANIFEST.in  README.md  setup.cfg
plugins/dimensionality/: CHANGELOG.md  setup.cfg
plugins/drive/: CHANGELOG.md  setup.cfg
plugins/lsf/: CHANGELOG.md  README.md  setup.cfg
plugins/similarity/: CHANGELOG.md  setup.cfg
plugins/sql/: CHANGELOG.md  setup.cfg
plugins/suggest/: CHANGELOG.md  setup.cfg
plugins/tags/: CHANGELOG.md  setup.cfg
plugins/tasks/: CHANGELOG.md  setup.cfg
src/mml/: __init__.py  __main__.py
tests/: README.md  conftest.py
tests/manual/: test_all_tags_correct.py
tests/performance/: test_dataset_loading_speed.py  test_file_manager_init_speed.py  test_meta_reading_speed.py  test_scheduler_init_speed.py  test_training_speed.py
tests/unit/: conftest.py  test_cli.py
(+191 files in other folders)
