[metadata]
name = mml-TODO
version = attr: mml_TODO.__version__
description = This is the MML ??? plugin, providing ???
long_description = file: README.md
long_description_content_type = text/markdown
author = Patrick Godau
author_email = patrick.godau@dkfz-heidelberg.de
license = MIT
url = https://git.dkfz.de/imsy/ise/mml
classifiers =
    Natural Language :: English
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Version Control :: Git
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Environment :: GPU
    Intended Audience :: Science/Research
    Typing :: Typed
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.10
package_dir =
    =src
packages = find:
zip_safe = no
include_package_data = True
install_requires =
    mml-core>=1.0.0

[options.entry_points]
mml.plugins =
    mml-TODO = mml_TODO.activate

[options.packages.find]
where=src
